tests/attributes/remove.stderr
error: Remove is not valid at the container level
 --> $DIR/remove.rs:4:12
  |
4 | #[designal(remove)]
  |            ^^^^^^

error: You should only remove once
  --> $DIR/remove.rs:10:16
   |
10 |     #[designal(remove)]
   |                ^^^^^^
